PasswordResetTool 0.4
  - use virtual host forwarded IP if present
  - i18n markup (translations in PloneTranslations)
   - fixed DTML markup to not fail on missing translations
  - deprectation warnings removed
  - tabindex not assumed present to be more CMF-friendly

PasswordResetTool-0.3
  - Updated to use CMFFormController
  - Support for using to set initial account passwords
  - Verify token before prompting user for new password
  - Generated URLs don't use query strings
  - Fixes to work with CMFMember